--- a/html/new-template.html
+++ b/html/new-template.html
@@ -153,12 +153,12 @@ placeholder='Markdown syntax supported
 			  name="expire"
 			  class="radio"
 			  value="0"
-			  checked =true/>
+			  />
 			<label class="radio-label" for="expireTime1">Never</label>
 	  
 			<input type="radio" class="radio" id="expireTime2" name="expire" value="1" />
 			<label  class="radio-label" for="expireTime2">1 day</label>
-			<input type="radio"  class="radio" id="expireTime3" name="expire" value="7" />
+			<input type="radio"  class="radio" id="expireTime3" name="expire" value="7" checked =true/>
 			<label class="radio-label" for="expireTime3">7 days</label>
 	  
 			<input type="radio"  class="radio" id="expireTime4" name="expire" value="30" />
