--- a/html/new-template.html
+++ b/html/new-template.html
@@ -70,7 +70,7 @@
 	padding: 10px;
 	background-color: #f0f0ff;
 	border-left: #b3131e solid 8px;
-	color: #808080;
+	color: #ef6f48;
 	font-size: 1.2em;
 
   }
@@ -95,7 +95,7 @@
 	<h2><a href="/">Txto</a>  <div style="text-align: right"  id="currentdomain"> </div> </h2>
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
-	<p class="tipmsg"> Please DO NOT abuse. you pay for whay you say. have a nice day</p>
+	<p class="tipmsg"> The Post that has not been visited for more than 180 days will be deleted.</p>
 
 	<h2>Create a Txto</h2>
 	<form id="create-a-Txto" method="post" action="/">
