--- a/html/new-template.html
+++ b/html/new-template.html
@@ -95,7 +95,7 @@
 	<h2><a href="/">Txto</a>  <div style="text-align: right"  id="currentdomain"> </div> </h2>
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
-	<p class="tipmsg">"Posts inactive for 180 days will be deleted.</p>
+	<p class="tipmsg">Posts inactive for 180 days will be deleted.</p>
 
 	<h2>Create a Txto</h2>
 	<form id="create-a-Txto" method="post" action="/">
