--- a/html/new-template.html
+++ b/html/new-template.html
@@ -72,7 +72,15 @@
 	border-left: #b3131e solid 8px;
 	color: #334;
 	font-size: 1.2em;
+  }
 
+  .tipmsg2{
+	padding: 10px;
+	background-color: #f0f0ff;
+	border-left: #FF69B4 solid 8px;
+	color: #FF69B4;
+	font-size: 1.2em;
+	font-weight: 700;
   }
 	 
 </style>
@@ -96,6 +104,7 @@
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
 	<p class="tipmsg">Posts inactive for 180 days will be deleted.</p>
+	<p class="tipmsg2">Make Love, Not War</p>
 
 	<h2>Create a Txto</h2>
 	<form id="create-a-Txto" method="post" action="/">
