--- a/html/new-template.html
+++ b/html/new-template.html
@@ -104,7 +104,7 @@
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
 	<p class="tipmsg">Posts inactive for 180 days will be deleted.</p>
-	<p class="tipmsg2">Make Love, Not War</p>
+	<!-- <p class="tipmsg2">Make Love, Not War</p> -->
 
 	<h2>Create a Txto</h2>
 	<form id="create-a-Txto" method="post" action="/">
