--- a/html/new-template.html
+++ b/html/new-template.html
@@ -109,7 +109,7 @@
 	<h2><a href="/">Txto</a>  <div style="text-align: right"  id="currentdomain"> </div> </h2>
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
-	<p class="tipmsg">Posts inactive for 180 days will be deleted.</p>
+	<!-- <p class="tipmsg">Posts inactive for 180 days will be deleted.</p> -->
 
 	<p class="tipmsg ad"><a href="https://github.com/iPasteLite/iPasteLite-Release/releases/download/v2.5.6/iPasteLite.app.zip">iPasteLite, best way to manager your pastebord on mac. click to downLoad</a></p>
 	<!-- <p class="tipmsg2">Make Love, Not War</p> -->
