--- a/html/new-template.html
+++ b/html/new-template.html
@@ -88,6 +88,10 @@
 	font-size: 1.2em;
 	font-weight: 700;
   }
+
+  #statuslink{
+	color: #111122;
+  }
 	 
 </style>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5034009710884860"
@@ -194,6 +198,7 @@ placeholder='Markdown syntax supported
 
 	|
 	<a href="./post2#%7B%22title%22%3A%22suggestion%22%2C%22token%22%3A%22E5hzaA0kzOUDgulgrj6Y0bXYBKAESEcEcdmBZA9OmpWOpUWSyn0l7vRt4CLK0QjJgM2XH7CjZA24QTOvXnELxO1jO1hhnG1dNXAagpY%3D%22%7D"> Advises<a>
+	<a href="./status" id="statuslink"> status<a></a>
    </div>
  
 
