--- a/html/status-template.html
+++ b/html/status-template.html
@@ -1,18 +1,39 @@
-<!DOCTYPE html>
-<html> 
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<meta name="description" content="why don't you make a txto">
+	<meta property="og:site_name" content="txto">
+	<meta property="og:title" content="Txto - Fast web pages for everybody" />
+	<title>Txto - Fast web pages for everybody</title>
+	<style type="text/css">body {font-size: 1.1em; line-height: 1.5em; max-width: 45em; margin: auto; padding: 0 2%;} img {max-width: 100%; display: block; margin: .75em auto;}</style>
+
     <style>
         #count{
-            font-size: 1.5rem;
-            margin: 100px;
+            margin-top: 100px;
+            font-size: 2.0rem;
+            font-weight: 700;
+            color: #111122;
+        }
+
+        #msg{
+            margin-top: 100px;
+            color: #808080;
         }
     </style>
+</head>
+
  
-<body>
 
-    <text id="count">x</text>
-</body>
+
+<body> <div class="maincard">
+    <p>
+    <text id='count'>...</text>
+    <p>
+    <text id='msg'></text>
+</div></body>
 <script>
-    __JS__
+	__JS__;
 </script>
-
 </html>
