--- a/html/404.html
+++ b/html/404.html
@@ -1,31 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="why don't you make a txto">
-	<meta property="og:site_name" content="txto">
-	<meta property="og:title" content="Txto - Fast web pages for everybody" />
-	<title>Txto - Fast web pages for everybody</title>
-	<style type="text/css">body {font-size: 1.1em; line-height: 1.5em; max-width: 45em; margin: auto; padding: 0 2%;} img {max-width: 100%; display: block; margin: .75em auto;}</style>
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="why don't you make a txto" />
+    <meta property="og:site_name" content="txto" />
+    <meta property="og:title" content="Txto - Fast web pages for everybody" />
+    <title>Txto - Fast web pages for everybody</title>
+    <style type="text/css">
+      body {
+        font-size: 1.1em;
+        line-height: 1.5em;
+        max-width: 45em;
+        margin: auto;
+        padding: 0 2%;
+      }
+      img {
+        max-width: 100%;
+        display: block;
+        margin: 0.75em auto;
+      }
+    </style>
+  </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRPJZGBBVY"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-ZRPJZGBBVY"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  gtag('config', 'G-ZRPJZGBBVY');
-</script>
+    gtag("config", "G-ZRPJZGBBVY");
+  </script>
 
+  <body>
+    <div class="maincard">
+      <h1>No post Here</h1>
+      Why don't you make one?
 
-<body> <div class="maincard">
-<h1>No post Here</h1>
-Why don't you make one?
-
-<p>
-<a href="/">txto</a>
-</div></body>
+      <p>
+        <a href="/">txto</a>
+      </p>
+    </div>
+  </body>
 </html>
