--- a/html/new-template.html
+++ b/html/new-template.html
@@ -52,6 +52,9 @@
 
 	#content-input{
 		height: 400px;
+		box-shadow: 0px 0px 10px #aaa;
+		border-radius: 5px;
+		padding: 1em 1em ;
 	}
 	#content-input ::placeholder {
 		color: #e3e3e3;
