--- a/html/new-template.html
+++ b/html/new-template.html
@@ -55,6 +55,7 @@
 		box-shadow: 0px 0px 10px #aaa;
 		border-radius: 5px;
 		padding: 1em 1em ;
+		border-style: none;
 	}
 	#content-input ::placeholder {
 		color: #e3e3e3;
