--- a/html/404.html
+++ b/html/404.html
@@ -44,7 +44,7 @@
       Why don't you make one?
 
       <p>
-        <a href="/">txto</a>
+        <a class="logo-sml" href="/">txto</a>
       </p>
     </div>
   </body>
