--- a/html/new-template.html
+++ b/html/new-template.html
@@ -115,7 +115,7 @@
 
 
 <body> <div class="maincard">
-	<h2><a href="/">Txto</a>  <div style="text-align: right"  id="currentdomain"> </div> </h2>
+	<h2><a class="logo" href="/">Txto</a>  <div style="text-align: right"  id="currentdomain"> </div> </h2>
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
 	<!-- <p class="tipmsg">Posts inactive for 180 days will be deleted.</p> -->
