--- a/html/recent-template.html
+++ b/html/recent-template.html
@@ -98,7 +98,7 @@
 </script>
 <body> <div class="maincard">
 
-	<h1><a href="/">Txto</a> </h1>
+	<h1><a  class="logo" href="/">Txto</a> </h1>
 	<p style="text-align: right" id="currentdomain"> </p>
 
 	<p>Fast web pages for everybody.</p>
