--- a/html/sign-template.html
+++ b/html/sign-template.html
@@ -30,7 +30,7 @@
 
 <body> <div class="maincard">
 	<h2>
-		<a href="/">Txto</a>
+		<a class="logo" href="/">Txto</a>
 		<div style="text-align: right" id="currentdomain"></div>
 	</h2>
 	<div id="beforecreate">
