--- a/html/succ-template.html
+++ b/html/succ-template.html
@@ -58,7 +58,7 @@
 
 
 <body> <div class="maincard">
-	<h2><a href="/">Txto</a>  </h2>
+	<h2><a class="logo" href="/">Txto</a>  </h2>
 
 	<p style="text-align: right"  id="currentdomain"> </p>
 
@@ -75,7 +75,7 @@
 		<a id="editurl" href="/"></a>
 	</div>
 
-	<p style="text-align: right"><a href="/">txto</a></p>
+	<p style="text-align: right"><a href="/"  class="logo-sml" >txto</a></p>
 </div></body>
 <script>
     __JS__
