--- a/html/terms.html
+++ b/html/terms.html
@@ -20,7 +20,7 @@
 
 
 <body> <div class="maincard">
-    <h1><a href="/">txto</a> Terms of Service</h1>
+    <h1><a class="logo" href="/">txto</a> Terms of Service</h1>
     
     <h2>IMPORTANT - READ BEFORE USING.</h2>
 
