--- a/html/dash-template.html
+++ b/html/dash-template.html
@@ -59,7 +59,7 @@
 
 
 <body> <div class="maincard">
-	<h1><a href="/">Txto</a>  </h1>
+	<h1><a href="/"  class="logo" >Txto</a>  </h1>
 	<hr >
 	<h2>更新Html包</h2>
 	<p>current <text id="currentbuildtime"> </text></p>
