--- a/html/done.html
+++ b/html/done.html
@@ -54,7 +54,7 @@
 
 <body> <div class="maincard">
     
-<h1><a href="/">Txto</a></h1>
+<h1><a class="logo"  href="/">Txto</a></h1>
 <p>Fast web pages for everybody.</p>
 <a href="/about">What is Txto?</a> | <a href="/how">How to use Txto</a>
 <h2>Create a Txto</h2>
