--- a/html/edit-template.html
+++ b/html/edit-template.html
@@ -64,7 +64,7 @@
 
 
 <body> <div class="maincard">
-	<h1><a href="/">Txto</a></h1>
+	<h1><a class="logo"  href="/">Txto</a></h1>
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
 	<a href="/about">What is Txto?</a> | <a href="/how">How to use Txto</a>
