--- a/html/post-template.html
+++ b/html/post-template.html
@@ -65,7 +65,7 @@
 
 
 <body> <div class="maincard">
-	<h2><a href="/">Txto</a>  <div style="text-align: right"  id="currentdomain"> </div> </h2>
+	<h2><a  class="logo"  href="/">Txto</a>  <div style="text-align: right"  id="currentdomain"> </div> </h2>
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
 
