--- a/html/postdetail-template.html
+++ b/html/postdetail-template.html
@@ -23,7 +23,7 @@
 			max-width: 100%
 		}
 		.time{
-            color: #eeeefa;
+            color: #eee;
             float: right;
 			font-size: 0.9em;
         }
