--- a/html/new-template.html
+++ b/html/new-template.html
@@ -120,7 +120,7 @@
 	<p>Fast web pages for everybody.</p>
 	<!-- <p class="tipmsg">Posts inactive for 180 days will be deleted.</p> -->
 	<!-- <p class="tipmsg2">Make Love, Not War</p> -->
-	<!-- <p class="tipmsg ad"><a href="https://github.com/iPasteLite/iPasteLite-Release/releases/download/v2.5.6/iPasteLite.app.zip">iPasteLite, best way to manager your pastebord on mac. click to downLoad</a></p> -->
+	<p class="tipmsg  "><a href="https://lei.pages.dev/YesOrNo">Yes ！ or NO?</a></p>
 	
 
 	<h2>Create a Txto</h2>
