--- a/html/cfg-api-list.html
+++ b/html/cfg-api-list.html
@@ -7,7 +7,7 @@ rand #随机post
 #recent #最近post
 sign #签名
 updatehtml # 更新html 和配置
-delete2 # 根据url前缀删除，长度至少为5
+# delete2 # 根据url前缀删除，长度至少为5
 clean #物理删除
 removeAllCache #删除缓存
 addPost #添加
