--- a/html/new-template.html
+++ b/html/new-template.html
@@ -120,7 +120,7 @@
 	<p>Fast web pages for everybody.</p>
 	<!-- <p class="tipmsg">Posts inactive for 180 days will be deleted.</p> -->
 	<!-- <p class="tipmsg2">Make Love, Not War</p> -->
-	<p class="tipmsg  "><a href="https://lei.pages.dev/YesOrNo">Yes❗️or NO ❓</a></p>
+	<!-- <p class="tipmsg  "><a href="https://lei.pages.dev/YesOrNo">Yes❗️or NO ❓</a></p> -->
 	
 
 	<h2>Create a Txto</h2>
